testdata/baselines/reference/submodule/compiler/jsdocParameterParsingInfiniteLoop.errors.txt
example.js(3,11): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
example.js(3,11): error TS8010: Type annotations can only be used in TypeScript files.


==== example.js (2 errors) ====
    // @ts-check
    /**
     * @type {function(@foo)}
              ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
              ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    let x;